# DeskAppForWhatsApp

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md
src/: .qmake.stash  CMakeLists.txt  DeskApp.icns  DeskAppForWhatsApp.pro  Info.plist  build_project.sh  clean.sh  deskapp.qrc  generate_msvc.sh  generate_xcode.sh  main.cpp  platforms.hpp  qwhatspageview.cpp  qwhatspageview.h  utilities.hpp  whatsappview.cpp  whatsappview.h  window.cpp  window.h
src/js/: bindings.js  inject.js
src/resources/mac/: dsa_pub.pem
